--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a62b45e3",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
     "parent_directory = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
     "\n",
     "# Specify the path to the data file relative to the project folder\n",
-    "data_file_path = os.path.join(parent_directory, 'data', 'creditcard_rawdata.csv')\n",
+    "data_file_path = os.path.join(parent_directory, 'data', 'raw.csv')\n",
     "\n",
     "# read the dataset\n",
     "card_df = pd.read_csv(data_file_path)\n",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b5ffe258",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a0997627",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a71c5912",
    "metadata": {},
    "outputs": [],
@@ -570,18 +570,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8dd0ed91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preprocessed data saved to: c:\\Users\\91787\\Desktop\\find-deafault-prediction-of-credit-card-fraud\\data\\preprocessed_data.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Optionally, print a message to confirm that the file has been saved\n",
     "print(f\"Preprocessed data saved to: {preprocessed_file_path}\")"
@@ -589,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d1aa39bf",
    "metadata": {},
    "outputs": [],
@@ -599,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ae8cd8c0",
    "metadata": {},
    "outputs": [],
